Testing carousel photo sizes

--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,9 @@
   
   .home-carousel img {
     height: 350px;          
-    object-fit: cover;      
+    object-fit: contain;      
     object-position: center;
+    background-color: #FFC763;
   }
 
   .footer {
