--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body{
     font-size: 2.5rem;
     font-weight: 700;
   }
-  
+
   .home-section h2{
     font-size: 1.5rem;
     font-weight: 600;
@@ -62,6 +62,20 @@ body{
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.6;
+  }
+
+  .bottom-div{
+    background-color: #17166D;
+    height: 5px;
+  }
+
+  .news h3 {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+  
+  .news li{
+    font-size: 1rem;
   }
 
   .footer {
