--- a/styles.css
+++ b/styles.css
@@ -85,12 +85,12 @@ body{
     font-size: .8rem;
   }
   
-  a {
+  .footer a {
     color: inherit;
     text-decoration: none;
   }
   
-  a:hover {
+  .footer a:hover {
     color: inherit;
     text-decoration: underline;
   }
