--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,16 @@ body{
     font-size: 1rem;
   }
 
+  .news a {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  .news a:hover {
+    color: inherit;
+    text-decoration: underline;
+  }
+
   .footer {
     background-color: #FFC763;
     color: #000000;
